--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,19 @@
 .container {
   width: 60%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 .form-group {
   margin-top: 3%;
 }
-#toppings {
+#toppings-container {
   margin-top: 3%;
+}
+.card-body {
+  padding: 2% 5% 2% 5%;
+}
+.form-check-inline {
+  padding: 1%;
 }
 #submit {
   display: block;
@@ -13,6 +21,6 @@
   margin-top: 3%;
   margin-bottom: 3%;
 }
-/* #pizza-order-container {
+#pizza-order-container {
   display: none;
-} */
+}
