--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,44 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.background {
+  background-image: url("../img/background.jpeg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 0;
+  padding-top: 8%;
+  padding-bottom: 8%;
+  overflow: auto;
+}
 .container {
-  width: 60%;
-  padding-top: 5%;
+  width: 50%;
+  padding-top: 0;
   padding-bottom: 5%;
+  margin-right: 10%;
+  float: right;
+
+}
+h1 {
+  color: #7e7a7a;
+  text-shadow: #2c2c2c 3px 3px 5px;
+  font-size: 6em;
+  text-align: center;
+  margin-bottom: 5%;
+  font-family: 'Kirang Haerang', cursive;
+}
+h2 { 
+  color: white;
+  font-size: 1.8em;
 }
 .form-group {
   margin-top: 3%;
 }
 #toppings-container {
-  margin-top: 3%;
+  margin-top: 6%;
 }
 .card-body {
   padding: 2% 5% 2% 5%;
@@ -18,9 +49,17 @@
 #submit {
   display: block;
   margin: auto;
-  margin-top: 3%;
+  margin-top: 6%;
   margin-bottom: 3%;
 }
 #pizza-order-container {
   display: none;
+  border-radius: 1.6%;
+  background-color: white;
+  overflow: auto;
+  padding: 5%;
+  margin-top: 6%;
+}
+#pizza-order-container ul {
+  width: 80%;
 }
